# BrandMind-Sovereign

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agent/: config.py  core.py  ingestion.py  router.py
agenthansa/: loop.py  register.py
api/: server.py
audio/: tts.py
demo/: cli.py
images/: gen.py
memory/: brand_memory.py
services/: kit.py  payments.py  tasks.py  tiers.py
tests/: test_memory.py  test_router.py
training/: botlearn.py
